[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = 32.0
offset_right = -32.0
offset_bottom = -32.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Sau Lưng Mẹ"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 42

[node name="Subtitle" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Phiêu lưu giải đố – Hai góc nhìn"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BtnAn" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Chơi tuyến An (Chương 1)"
size_flags_vertical = 3

[node name="BtnMai" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Chơi tuyến Mẹ Mai (Chương 1)"
size_flags_vertical = 3

[node name="BtnQuit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Thoát"
size_flags_vertical = 3
